--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a</li>
         <li><a href="seattle_living_housing.html">Housing</a>
         </li>
-        <li><a href="seattleliving1.html">Employment</a></li>
+        <li><a href="SeattleLiving1.html">Employment</a></li>
       </ul>
     </nav>
     <section>
