--- a/seattle_living_housing.html
+++ b/seattle_living_housing.html
@@ -70,6 +70,6 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a>
-      <li><a href="seattleliving1.html">Employment</a>
+      <li><a href="SeattleLiving1.html">Employment</a>
   </nav>
 </html>
