fixed seattleliving on seattle living page

--- a/SeattleLiving1.html
+++ b/SeattleLiving1.html
@@ -16,7 +16,7 @@
               <a href="seattle_living_housing.html">Housing</a>
             </li>
             <li>
-              <a href="seattleliving1.html">Employment</a>
+              <a href="SeattleLiving1.html">Employment</a>
             </li>
           </ul>
         </nav>
